--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = simple-message-notification
 summary = Documentation project for Simple Message Notification service
-description-file =
+description_file =
     README.rst
 author = Open Telekom Cloud
-home-page = https://open.telekom.cloud/
-python-requires = >=3.6
+home_page = https://open.telekom.cloud/
+python_requires = >=3.6
 classifier =
     Environment :: OpenStack
     Intended Audience :: Information Technology
