--- a/zuul.yaml
+++ b/zuul.yaml
@@ -3,7 +3,11 @@
     merge-mode: squash-merge
     default-branch: main
     templates:
-      - helpcenter-swiss-base-jobs
+      - helpcenter-base-jobs
+    vars:
+      sphinx_pdf_files:
+        - smn-api-ref.pdf
+        - smn-umn.pdf
     check:
       jobs:
         - noop
